# KDE-Whysper-Automation

./: .gitignore  DOCUMENTACAO.md  DOLPHIN_INTEGRACAO.md  README.md  WhatsApp Ptt 2025-10-19 at 20.41.48.txt  demo_features.py  example_usage.py  install_dolphin_menus.sh  main.py  pyproject.toml  requirements.txt  run_stt.sh  setup.sh
output_dir/: audio1.txt
