[project]
name = "stt"
version = "0.1.0"
description = "Speech to text using Whisper with diarization support"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper",
    "torch",
    "torchaudio",
    "pyannote.audio>=3.1.0",
    "huggingface_hub",
]

[project.scripts]
stt = "main:main"
